wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -330,6 +330,12 @@ form > fieldset {
   }
 }
 
+.input-label {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .input-label::after {
   content: ':';
 }
